Updated bib file Updated bib file Updated bib file Updated bib file Updated bib file Updated bib file Updated bib file Updated bib file Updated bib file

--- a/pages/publications.html
+++ b/pages/publications.html
@@ -42,6 +42,7 @@ title: Publications
                         [bib]
                     </a>
                     <span class="if pdf"><a class="pdf">[pdf]</a></span>
+                    <span class="if doi"><a class="bibtexVar" href="http://dx.doi.org/+DOI+" extra="doi">[doi]</a></span>
                 </div>
                 <div class="bibtexVar collapse" id="bib+BIBTEXKEY+" extra="BIBTEXKEY">
                     <div class="well">
